# wechat-article-to-markdown

./: .gitignore  README.md  SKILL.md  app.py  config.sample.yml  config_loader.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  springresearch_spec.md  task_queue.py  wechat_article_to_markdown.py
.github/workflows/: ci.yml  e2e.yml  publish.yml  release.yml
templates/: index.html
tests/: test_core.py  test_e2e_live.py
